--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ volumes:
 networks:
   demo:
 
+
+name: hsep_ai_base_kit
+
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
   networks: ['demo']
@@ -20,6 +23,8 @@ x-n8n: &service-n8n
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
     - OLLAMA_HOST=${OLLAMA_HOST:-ollama:11434}
+    - NODE_FUNCTION_ALLOW_EXTERNAL=*
+    - NODE_FUNCTION_ALLOW_BUILTIN=*
   env_file:
     - path: .env
       required: true
@@ -45,7 +50,7 @@ x-init-ollama: &init-ollama
     - OLLAMA_HOST=ollama:11434
   command:
     - "-c"
-    - "sleep 3; ollama pull llama3.2"
+    - "sleep 3; ollama pull llama3.2; ollama pull nomic-embed-text:v1.5; ollama pull qwen3:0.6b"
 
 services:
   postgres:
@@ -53,6 +58,8 @@ services:
     hostname: postgres
     networks: ['demo']
     restart: unless-stopped
+    ports:
+      - 5432:5432
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
@@ -106,6 +113,11 @@ services:
       - 6333:6333
     volumes:
       - qdrant_storage:/qdrant/storage
+    healthcheck:
+      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/6333 && echo -e 'GET /readyz HTTP/1.1\\r\\nHost: localhost\\r\\nConnection: close\\r\\n\\r\\n' >&3 && grep -q 'HTTP/1.1 200' <&3"]
+      interval: 5s
+      timeout: 3s
+      retries: 4
 
   ollama-cpu:
     profiles: ["cpu"]
@@ -148,3 +160,57 @@ services:
     image: ollama/ollama:rocm
     depends_on:
      - ollama-gpu-amd
+
+  huggingface-rerank-fastapi-app:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile_huggingface
+    image: huggingface-rerank-fastapi-app:latest
+    hostname: huggingface
+    container_name: huggingface-rerank-fastapi-app
+    networks: ['demo']
+    restart: unless-stopped
+    ports:
+      - "8001:8001"
+   
+
+
+  mem0-local:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile_mem0
+    image: mem0-local:latest
+    container_name: mem0-local
+    restart: unless-stopped
+    environment:
+      # ---- Ollama
+      OLLAMA_BASE_URL: "http://ollama:11434"
+      LLM_MODEL: "gemma3:270m"
+      LLM_TEMPERATURE: "0.1"
+      LLM_MAX_TOKENS: "2048"
+      # ---- Embeddings (be sure the dims match the model you pull in Ollama)
+      EMBED_MODEL: "nomic-embed-text:v1.5"
+      EMBED_DIMS: "768"
+      # ---- Qdrant
+      QDRANT_HOST: "qdrant"
+      QDRANT_PORT: "6333"
+      QDRANT_COLLECTION: "memories"
+    ports:
+      - "8002:8002"
+    networks: ['demo']
+    # depends_on:
+    #   qdrant:
+    #     condition: service_healthy
+
+    # to run docker on cpu 
+    # docker compose --profile cpu up -d
+
+  qdrant-init:
+    image: curlimages/curl:latest
+    container_name: qdrant-init
+    networks: ['demo']
+    depends_on:
+      qdrant:
+        condition: service_healthy
+    entrypoint: >
+      sh -c "sleep 5; curl -X PUT http://qdrant:6333/collections/hybrid_rag -H 'Content-Type: application/json' -d '{\"vectors\": {\"default\": {\"distance\": \"Dot\", \"size\": 768}}, \"sparse_vectors\": {\"bm42\": {\"modifier\": \"idf\"}}}'"
