--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,7 @@ services:
         condition: service_healthy
       n8n-import:
         condition: service_completed_successfully
+    entrypoint: /bin/sh -c "mkdir -p /home/node/.n8n/nodes && cd /home/node/.n8n/nodes && npm install n8n-nodes-qdrant && n8n"
 
   qdrant:
     image: qdrant/qdrant
