--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ N8N_ENCRYPTION_KEY=super-secret-key
 N8N_USER_MANAGEMENT_JWT_SECRET=even-more-secret
 N8N_DEFAULT_BINARY_DATA_MODE=filesystem
 
-COMPOSE_PROFILES=cpu
+COMPOSE_PROFILES=gpu-nvidia
 
 # For Mac users running OLLAMA locally
 # See https://github.com/n8n-io/self-hosted-ai-starter-kit?tab=readme-ov-file#for-mac--apple-silicon-users
